# sherlock-server

./: .gitignore  .gitmodules  main.py  pyproject.toml
app/: main.py
app/abc/: sherlock.py
app/impl/: gpt_sherlock.py  nmap_sherlock.py  sqlmap_sherlock.py
app/routers/: report.py  test.py  trafficAnalysis.py  trafficLog.py
